--- a/src/containers/Projects/_Projects.scss
+++ b/src/containers/Projects/_Projects.scss
@@ -53,7 +53,7 @@
     .projects-content {
       .projects-row {
         margin-top: 0;
-        margin-bottom: 100px;
+        margin-bottom: 50px;
         height: auto;
         width: 100%;
       }
