--- a/src/containers/ScreenContainer/_ScreenContainer.scss
+++ b/src/containers/ScreenContainer/_ScreenContainer.scss
@@ -62,3 +62,39 @@
     }
   }
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  .overflow-frame {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    z-index: 1;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+
+    .screen-frame {
+      position: absolute;
+      background-color: black;
+      z-index: 2;
+      width: 90%;
+      height: 95%;
+      border-radius: 50px;
+      overflow: hidden;
+
+      .content {
+        width: 100%;
+        height: 100%;
+        background-color: cadetblue;
+        border-radius: 50px;
+        z-index: 3;
+        opacity: 0.7;
+
+        animation: appear 0.5s steps(44, end);
+        animation-delay: 0s;
+        animation-fill-mode: forwards;
+      }
+    }
+  }
+}
